[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace = true
game_sockets = { path = "../game_sockets", default-features = false, features = ["quic"] }
tokio = { version = "1.52.3", features = ["full"] }
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }