[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
game_sockets.workspace = true
bevy = "0.13"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
