[package]
name = "dedicated_server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared.workspace = true
game_sockets.workspace = true
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"