[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
deadpool-redis = "0.23.0"
redis = { version = "1.2.1", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared.workspace = true
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }